# nepremicninko

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  main.py  pyproject.toml
.github/workflows/: build-image.yml  lint.yml
app/core/: config.py  database.py  logger.py  models.py
app/services/: crawler.py  notify.py  parse.py  scheduler.py
config/: urls.txt
deployment/: Dockerfile  docker-compose.yml
