[project]
name = "nepremicninko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.1",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
