[project]
name = "nepremicninko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.1",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.5",
]
